--- a/autoconf-lib-link/ChangeLog
+++ b/autoconf-lib-link/ChangeLog
@@ -1,3 +1,11 @@
+2008-09-07  Bruno Haible  <bruno@clisp.org>
+
+	* config.rpath: Update according to libtool-2.2.6.
+
+2008-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* config.rpath: Support AIX 6.1 and higher.
+
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Use LT_INIT instead of AC_PROG_LIBTOOL.
