--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* configure.ac: Use AC_TYPE_UNSIGNED_LONG_LONG_INT instead of
+	gl_AC_TYPE_UNSIGNED_LONG_LONG.
+
 2008-08-17  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Adapt AC_C_BIGENDIAN invocation to autoconf 2.62: make
