--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-14  Bruno Haible  <bruno@clisp.org>
+
+	* msgmerge.c (definitions_current_list, definitions_set_current_list):
+	Move functions.
+
 2008-09-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
             Bruno Haible  <bruno@clisp.org>
 
