Document new msgcmp option.

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,9 @@ Version 0.18 - January 2008
 * msgmerge is up to 10 times faster when the PO and POT files are large.
   This speedup was contributed by Ralf Wildenhues.
 
+* msgcmp has a new option -N/--no-fuzzy-matching, like msgmerge has since
+  version 0.12.
+
 * Updated the meaning of 'gcc-internal-format' to match GCC 4.3.
 
 Version 0.17 - November 2007
