--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-21  Bruno Haible  <bruno@clisp.org>
+
+	* build-aux/fixaclocal: Adapt for newer versions of 'aclocal'.
+
 2008-09-14  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC,
