--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-27  Bruno Haible  <bruno@clisp.org>
+
+	* ISO_639-2: Update entry about Tamashek.
+
 2008-09-15  Bruno Haible  <bruno@clisp.org>
 
 	* msgcmp.texi: Document option -N/--no-fuzzy-matching.
