--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-27  Bruno Haible  <bruno@clisp.org>
+
+	* build-aux/config.guess: Update to GNU version 2008-09-08.
+	* build-aux/config.sub: Likewise.
+
 2008-09-21  Bruno Haible  <bruno@clisp.org>
 
 	* build-aux/fixaclocal: Adapt for newer versions of 'aclocal'.
