--- a/gettext-runtime/doc/matrix.texi
+++ b/gettext-runtime/doc/matrix.texi
@@ -1,6 +1,6 @@
 @example
 @group
-Ready PO files       af am az be be@latin bg bs ca cs da de el en en_GB
+Ready PO files       af am az be be@@latin bg bs ca cs da de el en en_GB
                    +----------------------------------------------------+
 a2ps               |          []                [] [] [] [] []     []   |
 aegis              |                                     []             |
@@ -158,7 +158,7 @@ xchat              |          []          []    [] []    [] []          |
 xdg-user-dirs      | []       []    []    []    [] [] [] [] []          |
 xkeyboard-config   |                      []    [] []                   |
                    +----------------------------------------------------+
-                     af am az be be@latin bg bs ca cs da de el en en_GB
+                     af am az be be@@latin bg bs ca cs da de el en en_GB
                       5  0  1  9     3    23  2 39 54 83 84 17  1  10  
 @end group
 
