--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,16 @@
+2007-11-12  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Don't insist on 'long long int' support in the preprocessor.  It
+	breaks too many things.  For example, PRIdMAX still uses a 'long
+	long int' format with the latest Sun compiler, even though
+	HAVE_LONG_LONG_INT isn't defined due to that compiler's
+	preprocessor problem.  This causes the latest coreutils to dump
+	core on Solaris 10 sparc with the Sun C compiler.
+	Instead, fix the 2007-10-16 problem in a different way, by evaluating
+	the troublesome expressions at configure-time, not at #if-time.
+	* longlong.m4 (_AC_TYPE_LONG_LONG_SNIPPET): Don't test the
+	preprocessor.
+
 2008-08-17  Bruno Haible  <bruno@clisp.org>
 
 	* threadlib.m4: New file, from gnulib.
