Update with many bugfixes from gnulib.

--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,138 @@
+2008-09-22  Eric Blake  <ebb9@byu.net>
+	    Bruno Haible  <bruno@clisp.org>
+
+	vasnprintf: fix x86/glibc regression on printf("%La", 0.0L)
+	* vasnprintf.c (VASNPRINTF): Support 0.0 on platforms that supply %A
+	but mishandle pseudo-NaN.
+	Reported by Simon Josefsson.
+
+2008-09-18  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (VASNPRINTF): When printing ±0.0L in
+	NEED_PRINTF_INFINITE_LONG_DOUBLE case with 'e' format, always use two
+	digits for the exponent.
+
+2008-09-18  Jim Meyering  <meyering@redhat.com>
+	    Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (decimal_point_char): Define also if
+	NEED_PRINTF_INFINITE_LONG_DOUBLE.
+
+2008-09-16  Bruno Haible  <bruno@clisp.org>
+	and Eric Blake  <ebb9@byu.net>
+
+	vasnprintf: support Irix 5.3
+	* vasnprintf.c (VASNPRINTF): Also handle -0.0L on platforms that
+	mishandle long double infinity.
+	Reported by Tom G. Christensen.
+
+2008-09-02  Eric Blake  <ebb9@byu.net>
+
+	vasnprintf-posix: handle large precision via %.*d
+	* vasnprintf.c (VASNPRINTF): Don't pass precision to snprintf
+	when handling it ourselves.
+	Reported by Alain Guibert.
+
+2008-07-10  Ben Pfaff  <blp@gnu.org>
+
+	* vasnprintf.c: Update references to renamed include files.
+
+2008-05-21  Bruno Haible  <bruno@clisp.org>
+
+	Avoid one more warning from gcc.
+	* vasnprintf.c (IF_LINT): Update comments.
+	(VASNPRINTF): Use it also for the 'prefix' array initializer.
+
+2008-05-21  Jim Meyering  <meyering@redhat.com>
+
+	avoid a warning from gcc
+	* vasnprintf.c (IF_LINT): Define.
+	(scale10_round_decimal_long_double):
+	Use it to avoid a "may be used uninitialized" warning.
+	(scale10_round_decimal_double): Likewise.
+
+2008-05-16  Jim Meyering  <meyering@redhat.com>
+	    Bruno Haible  <bruno@clisp.org>
+
+	Avoid some warnings from "gcc -Wshadow".
+	* vasnprintf.c (exp, remainder): Define to different identifiers.
+
+2008-04-19  Bruno Haible  <bruno@clisp.org>
+
+	Work around snprintf bug on Linux libc5.
+	* vasnprintf.c (USE_SNPRINTF): Set to 0 on Linux libc5 systems.
+
+2008-04-19  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (floorlog10l, floorlog10): Reduce maximum error from
+	0.0058 to less than 10^-7.
+
+2008-04-19  Bruno Haible  <bruno@clisp.org>
+
+	Fix rounding when a precision is given.
+	* vasnprintf.c (is_borderline): New function.
+	(VASNPRINTF): For %e and %g, consider replacing the digits 10....0 with
+	9...9x.
+	Reported by John Darrington <john@darrington.wattle.id.au> via
+	Ben Pfaff <blp@cs.stanford.edu>.
+
+2008-03-30  Bruno Haible  <bruno@clisp.org>
+
+	Fix buffer overrun.
+	* vasnprintf.c (VASNPRINTF): If !USE_SNPRINTF && pad_ourselves:
+	Don't consider the width for tmp_length. Check count against tmp_length
+	before doing the padding. Ensure enough allocation during padding.
+
+2008-03-30  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (EOVERFLOW): Remove fallback.
+
+2008-03-30  Bruno Haible  <bruno@clisp.org>
+
+	Fix bug introduced on 2007-06-10.
+	* vasnprintf.c (VASNPRINTF): When performing zero-padding, use
+	spaces instead of 0 digits for 's' also when ENABLE_UNISTDIO.
+
+2008-02-07  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (VASNPRINTF): Don't use %n on native Woe32 systems.
+	Avoids a crash on Windows Vista.
+	Reported by Adam Strzelecki <ono@java.pl> via
+	Simon Josefsson <simon@josefsson.org>.
+
+2008-02-06  Bruno Haible  <bruno@clisp.org>
+
+	Fix *printf behaviour regarding the left-adjust flag on HP-UX 10.20.
+	* vasnprintf.c (VASNPRINTF): Handle NEED_PRINTF_FLAG_LEFTADJUST.
+	Reported by Peter Fales <psfales@alcatel-lucent.com>.
+
+2008-02-06  Bruno Haible  <bruno@clisp.org>
+
+	Fix bug introduced on 2007-06-10.
+	* vasnprintf.c (VASNPRINTF): Perform zero-padding also if
+	!NEED_PRINTF_FLAG_ZERO.
+
+2008-01-29  Jim Meyering  <meyering@redhat.com>
+
+	vasnprintf.c: Avoid warning about unused label
+	* vasnprintf.c (VASNPRINTF) [!USE_SNPRINTF]: Guard the
+	"overflow" label definition and associated code with the
+	same cpp condition that guards the sole use of that label.
+
+2008-01-26  Bruno Haible  <bruno@clisp.org>
+
+	Rename isnan, applicable to 'double' only, to isnand.
+	* vasnprintf.c: Include isnand.h instead of isnan.h.
+	(is_infinite_or_zero, VASNPRINTF): Use isnand instead of isnan.
+
+2008-01-08  Jim Meyering  <meyering@redhat.com>
+	    Bruno Haible  <bruno@clisp.org>
+
+	* printf-parse.c (PRINTF_PARSE): Handle a size specifier "q" on MacOS X
+	and a size specifier "I64" on mingw. Needed for PRIdMAX.
+	Reported by Peter Fales in
+	<http://lists.gnu.org/archive/html/bug-coreutils/2007-12/msg00148.html>.
+
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Use LT_INIT instead of AC_PROG_LIBTOOL.
