--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -95,7 +95,7 @@
 
 2008-02-28  Atsushi SAKAI  <sakaia@jp.fujitsu.com>
 
-	* lib/xsize.h: Fix typo in comment: s/tupe/type/.
+	* xsize.h: Fix typo in comment: s/tupe/type/.
 
 2008-02-07  Bruno Haible  <bruno@clisp.org>
 
