--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,15 @@
+2008-09-28  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (msgcmp_LDADD): Add MSGMERGE_LIBM.
+	Reported by Rainer Tammer <tammer@tammer.net>.
+
+2008-09-27  Bruno Haible  <bruno@clisp.org>
+
+	* lang-table.c (language_table): Add Asturian, Crimean Tatar, Friulian,
+	Papiamento.
+	* msginit.c (catalogname_for_locale): Add Asturian, Friulian,
+	Papiamento.
+
 2008-09-26  Bruno Haible  <bruno@clisp.org>
 
 	* write-catalog.c (cmp_by_msgid, cmp_by_filepos): Compare the msgctxt
