--- a/gettext-runtime/tests/ChangeLog
+++ b/gettext-runtime/tests/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-28  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (test_lock_SOURCES): Add threadlib.c.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
