--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-04  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh: Fix execute permissions of some files.
+
 2008-09-28  Bruno Haible  <bruno@clisp.org>
 
 	* build-aux/ltmain.sh (func_emit_cwrapperexe_src): On mingw,
