--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,10 @@
+2008-10-04  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-po.h.in (po_message_is_range, po_message_set_range): New
+	declarations.
+	* gettext-po.c (po_message_is_range, po_message_set_range): New
+	functions.
+
 2008-10-03  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-po.c (po_message_check_format): Update for signature changes
