--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,18 @@
+2008-10-04  Bruno Haible  <bruno@clisp.org>
+
+	* msgfmt-17: New file.
+	* Makefile.am (TESTS): Add it.
+	Reported by Anatoly Techtonik <techtonik@gmail.com>
+	via <https://savannah.gnu.org/bugs/?24433>.
+
+2008-10-04  Bruno Haible  <bruno@clisp.org>
+
+	* msgcat-18: New file.
+	* msgcomm-27: New file.
+	* msgmerge-24: New file.
+	* xgettext-c-18: New file.
+	* Makefile.am (TESTS): Add them.
+
 2008-09-29  Bruno Haible  <bruno@clisp.org>
 
 	Avoid test suite failures on mingw.
