--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2008-10-28  Bruno Haible  <bruno@clisp.org>
+
+	* msgmerge.c (match_domain): Remove space between '#' and 'pragma' for
+	OpenMP.
+	Reported by Lamarque Eric <eric.lamarque@free.fr>.
+
 2008-10-04  Bruno Haible  <bruno@clisp.org>
 
 	* plural-distrib.h (struct plural_distribution): New field 'histogram'.
