--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-14  Bruno Haible  <bruno@clisp.org>
+
+	* msgfilter.texi: Document the environment variables MSGFILTER_MSGCTXT,
+	MSGFILTER_MSGID, MSGFILTER_LOCATION.
+
 2008-10-10  Noritada Kobayashi  <noritadak@gmail.com>
 
 	* gettext.texi (PO Mode): Update remaining obsolete key bindings used
