--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-14  Bruno Haible  <bruno@clisp.org>
+
+	* msgfilter.c: Include xvasprintf.h, xsetenv.h.
+	(process_message): Set the environment variables MSGFILTER_MSGCTXT,
+	MSGFILTER_MSGID, MSGFILTER_LOCATION.
+
 2008-10-28  Bruno Haible  <bruno@clisp.org>
 
 	* msgmerge.c (match_domain): Remove space between '#' and 'pragma' for
