--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-10-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (install_override_mode): New LT_DECL.
+	(_LT_SYS_DYNAMIC_LINKER) [hpux9*, hpux10*, hpux11*]: Set it.
+	* build-aux/ltmain.sh (func_mode_install): Build a second command line,
+	$install_shared_prog, for the installation of the shared library.
+	Override resp. set the permission mode if install_override_mode is
+	nonempty.
+
 2008-10-04  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh: Fix execute permissions of some files.
