--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-17  Bruno Haible  <bruno@clisp.org>
+
+	* libgrep.m4 (gt_LIBGREP): Use AC_FUNC_MBRTOWC instead of
+	gl_FUNC_MBRTOWC.
+
 2008-08-17  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (aclocal_DATA): Add threadlib.m4.
