--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-18  Bruno Haible  <bruno@clisp.org>
+
+	* locale-ja.m4: Remove file. Moved to gnulib.
+
 2008-12-17  Bruno Haible  <bruno@clisp.org>
 
 	* libgrep.m4 (gt_LIBGREP): Use AC_FUNC_MBRTOWC instead of
