--- a/autoconf-lib-link/m4/ChangeLog
+++ b/autoconf-lib-link/m4/ChangeLog
@@ -1,3 +1,9 @@
+2008-12-30  Bruno Haible  <bruno@clisp.org>
+
+	* lib-prefix.m4 (AC_LIB_LINKFLAGS_BODY): Don't overwrite
+	LIB${NAME}_PREFIX when considering the dependencies of lib${name}.
+	Reported by Charles Wilson <cygwin@cwilson.fastmail.fm>.
+
 2008-08-31  Bruno Haible  <bruno@clisp.org>
 
 	Assume Solaris specific bi-arch conventions on Solaris systems.
