--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-14  Bruno Haible  <bruno@clisp.org>
+
+	* intl.m4: More consistent m4 quoting.
+
 2009-01-14  Jim Meyering  <meyering@redhat.com>
 
 	* codeset.m4: More consistent m4 quoting.
