--- a/autoconf-lib-link/ChangeLog
+++ b/autoconf-lib-link/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-14  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: More consistent m4 quoting.
+
 2008-09-07  Bruno Haible  <bruno@clisp.org>
 
 	* config.rpath: Update according to libtool-2.2.6.
