--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-14  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: More consistent m4 quoting.
+
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Use LT_INIT instead of AC_PROG_LIBTOOL.
