--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-14  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: More consistent m4 quoting.
+
 2008-09-22  Eric Blake  <ebb9@byu.net>
 	    Bruno Haible  <bruno@clisp.org>
 
