--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-14  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: More consistent m4 quoting.
+
 2007-12-24  Bruno Haible  <bruno@clisp.org>
 
 	* hello-*/po/Makefile.am ($(POFILES), .nop.po-update): When using
