--- a/gettext-runtime/src/ChangeLog
+++ b/gettext-runtime/src/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-17  Bruno Haible  <bruno@clisp.org>
+
+	Update after gnulib changed.
+	* Makefile.am (RELOCATABLE_STRIP): New variable.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
