--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-17  Bruno Haible  <bruno@clisp.org>
+
+	Update after gnulib changed.
+	* Makefile.am (RELOCATABLE_STRIP): New variable.
+
 2008-12-07  Bruno Haible  <bruno@clisp.org>
 
 	* write-po.c (message_print_comment_filepos): Use a 'const' pointer
